--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>float cards</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Float cards</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="container">
     <header>
-        <h1>Meet Our Team</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet, exercitationem saepe ipsam quam hic nobis cupiditate voluptates placeat dolorum culpa possimus similique odio itaque repudiandae maiores magni dolor quos.</p>
+       <h1>Meet Our Team</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum sunt aut repellendus reprehenderit, illo reiciendis quas odio ratione voluptatum dignissimos. Debitis quibusdam fugit recusandae iusto labore distinctio omnis aliquid magni.</p>  
     </header>
-
-    <main></main>
+  <main>
+    
+  </main>
 </body>
 </html>
