--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Float cards</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body class="container">
+<body>
     <header>
-       <h1>Meet Our Team</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum sunt aut repellendus reprehenderit, illo reiciendis quas odio ratione voluptatum dignissimos. Debitis quibusdam fugit recusandae iusto labore distinctio omnis aliquid magni.</p>  
+      
     </header>
   <main>
-    
+     <h1>Meet Our Team</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum sunt aut repellendus reprehenderit, illo reiciendis quas odio ratione voluptatum dignissimos. Debitis quibusdam fugit recusandae iusto labore distinctio omnis aliquid magni.</p>  
   </main>
 </body>
 </html>
