--- a/index.html
+++ b/index.html
@@ -15,17 +15,14 @@
 
     <main>
         <div class="Container">
-             
-            <section>
+             <section class="columns">
+                    <div class="column clearfix">
 
-                <div class="column clearfix">
-
-                    <img src="./assets/img/male1.png" alt="immagine1">
-                    <h2>Marco Bianchi</h2>
-                    <h3>designer</h3>
-                    <h4>marcobianchi@team.com</h4>
-
-                </div>
+                        <img src="./assets/img/male1.png" alt="immagine1">
+                        <h2>Marco Bianchi</h2>
+                        <h3>designer</h3>
+                        <h4>marcobianchi@team.com</h4>
+                    </div>
 
             </section>
         
