--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
     </header>
 
     <main>
-        <div class="Container">
-             <section class="columns">
-                    <div class="column clearfix">
 
+        <div class="Container clearfix"> 
+            <section class="clearfix">
+                    <div class="column clearfix">
                         <img src="./assets/img/male1.png" alt="immagine1">
-                        <h2>Marco Bianchi</h2>
-                        <h3>designer</h3>
-                        <h4>marcobianchi@team.com</h4>
-                    </div>
-            
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
+                            </div>
 
             </section>
         
