--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
 
-        <div class="Container clearfix"> 
+        <div class="container clearfix"> 
             <section class="clearfix">
                     <div class="column clearfix">
                         <img src="./assets/img/male1.png" alt="immagine1">
@@ -24,6 +24,40 @@
                                 <h4>marcobianchi@team.com</h4>
                             </div>
 
+                    <div class="column clearfix">
+                        <img src="./assets/img/male1.png" alt="immagine1">
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
+                            </div>   
+                                    
+                    <div class="column clearfix">
+                        <img src="./assets/img/male1.png" alt="immagine1">
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
+                            </div>
+
+                    <div class="column clearfix">
+                        <img src="./assets/img/male1.png" alt="immagine1">
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
+                            </div>
+
+                    <div class="column clearfix">
+                        <img src="./assets/img/male1.png" alt="immagine1">
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
+                            </div>
+
+                    <div class="column clearfix">
+                        <img src="./assets/img/male1.png" alt="immagine1">
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
+                            </div>
             </section>
         
         </div>
