--- a/index.html
+++ b/index.html
@@ -18,45 +18,45 @@
         <div class="container clearfix"> 
             <section class="clearfix">
                     <div class="column clearfix">
-                        <img src="./assets/img/male1.png" alt="immagine1">
+                        <img src="assets/img/male1.png" alt="immagine1">
                                 <h2>MARCO BIANCHI</h2>
                                 <h3>Designer</h3>
                                 <h4>marcobianchi@team.com</h4>
                             </div>
 
                     <div class="column clearfix">
-                        <img src="./assets/img/male1.png" alt="immagine1">
-                                <h2>MARCO BIANCHI</h2>
-                                <h3>Designer</h3>
-                                <h4>marcobianchi@team.com</h4>
+                        <img src="assets/img/female1.png" alt="immagine2">
+                                <h2>LAURA ROSSI</h2>
+                                <h3>Front-end Developer</h3>
+                                <h4>laurarossi@team.com</h4>
                             </div>   
                                     
                     <div class="column clearfix">
-                        <img src="./assets/img/male1.png" alt="immagine1">
-                                <h2>MARCO BIANCHI</h2>
-                                <h3>Designer</h3>
-                                <h4>marcobianchi@team.com</h4>
+                        <img src="assets/img/male2.png" alt="immagine3">
+                                <h2>GIORGIO VERDI</h2>
+                                <h3>Back-end Developer</h3>
+                                <h4>giorgioverdi@team.com</h4>
                             </div>
 
                     <div class="column clearfix">
-                        <img src="./assets/img/male1.png" alt="immagine1">
-                                <h2>MARCO BIANCHI</h2>
-                                <h3>Designer</h3>
-                                <h4>marcobianchi@team.com</h4>
+                        <img src="assets/img/female2.png" alt="immagine4">
+                                <h2>MARTA IPSUM</h2>
+                                <h3>SEO Specialist</h3>
+                                <h4>martaipsum@team.com</h4>
                             </div>
 
                     <div class="column clearfix">
-                        <img src="./assets/img/male1.png" alt="immagine1">
-                                <h2>MARCO BIANCHI</h2>
-                                <h3>Designer</h3>
-                                <h4>marcobianchi@team.com</h4>
+                        <img src="assets/img/male3.png" alt="immagine5">
+                                <h2>ROBERTO LOREM</h2>
+                                <h3>Project Manager</h3>
+                                <h4>robertolorem@team.com</h4>
                             </div>
 
                     <div class="column clearfix">
-                        <img src="./assets/img/male1.png" alt="immagine1">
-                                <h2>MARCO BIANCHI</h2>
-                                <h3>Designer</h3>
-                                <h4>marcobianchi@team.com</h4>
+                        <img src="assets/img/female3.png" alt="immagine6">
+                                <h2>DANIELA AMET</h2>
+                                <h3>Analyst</h3>
+                                <h4>danielaamet@team.com</h4>
                             </div>
             </section>
         
