--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="container clearfix"> 
             <section class="clearfix">
-                    <div class="column clearfix text">
+                    <div class="column clearfix">
                         <img src="assets/img/male1.png" alt="immagine1">
                                 <h2>MARCO BIANCHI</h2>
                                 <h3>Designer</h3>
