--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     <main>
 
         <div class="container clearfix"> 
-            <section class="clearfix">
-                    <div class="column clearfix">
+            <section class="columns">
+                    <div class="column">
+                        <div class="card">
                         <img src="assets/img/male1.png" alt="immagine1">
-                                <h2>MARCO BIANCHI</h2>
-                                <h3>Designer</h3>
-                                <h4>marcobianchi@team.com</h4>
-                            </div>
+                             <div class="text">
+                                <span>MARCO BIANCHI</span>
+                                <span>Designer</span>
+                                <span>marcobianchi@team.com</span>
+                             </div>
+                        </div>
+                    </div>
 
                     <div class="column clearfix">
                         <img src="assets/img/female1.png" alt="immagine2">
