--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         <div class="card">
                         <img src="assets/img/male1.png" alt="immagine1">
                              <div class="text">
-                                <span>MARCO BIANCHI</span>
-                                <span>Designer</span>
-                                <span>marcobianchi@team.com</span>
+                                <h2>MARCO BIANCHI</h2>
+                                <h3>Designer</h3>
+                                <h4>marcobianchi@team.com</h4>
                              </div>
                         </div>
                     </div>
